--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Oxford Handicrafts
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,62 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
+      <ion-title size="large">Oxford Handicrafts</ion-title>
     </ion-toolbar>
   </ion-header>
+<div class="horizontal-cards">
+  <ion-card color="light">
+    <ion-card-header>
+      <ion-card-title>Santa Claus on Wall</ion-card-title>
+      <ion-card-subtitle>Limited Edition on Stock</ion-card-subtitle>
+    </ion-card-header>
+  
+    <ion-card-content>
+     Buy this limited edition Christmas decor now.
+    </ion-card-content>
+    <img src="assets/4.jpg">
+    <ion-icon name="card-outline"></ion-icon>
+    <ion-label>Buy this item</ion-label>
+    <ion-icon name="cart-outline"></ion-icon>
+    <ion-label>Add to Cart</ion-label>
+    <ion-icon name="star-half-outline"></ion-icon>
+    <ion-label>Rate</ion-label>
+  </ion-card>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <ion-card color="light">
+    <ion-card-header>
+      <ion-card-title>Rabbit Wall Decor</ion-card-title>
+      <ion-card-subtitle>Limited Edition on Stock</ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+     Buy this rabbit wall decor to decorate your dull wall.
+    </ion-card-content>
+    <img src="assets/2.jpg">
+    <ion-icon name="card-outline"></ion-icon>
+    <ion-label>Buy this item</ion-label>
+    <ion-icon name="cart-outline"></ion-icon>
+    <ion-label>Add to Cart</ion-label>
+    <ion-icon name="star-half-outline"></ion-icon>
+    <ion-label>Rate</ion-label>
+  </ion-card>
+
+
+  <ion-card color="light">
+    <ion-card-header>
+      <ion-card-title>Cute Owl</ion-card-title>
+      <ion-card-subtitle>Limited Edition on Stock</ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+     Get 25% discount on buying this cute owl decor.
+    </ion-card-content>
+    <img src="assets/3.jpg">
+    <ion-icon name="card-outline"></ion-icon>
+    <ion-label>Buy this item</ion-label>
+    <ion-icon name="cart-outline"></ion-icon>
+    <ion-label>Add to Cart</ion-label>
+    <ion-icon name="star-half-outline"></ion-icon>
+    <ion-label>Rate</ion-label>
+  </ion-card>
+
+  </div>
 </ion-content>
