--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,3 +1,10 @@
 ion-content ion-toolbar {
   --background: translucent;
 }
+
+.horizontal-cards {
+  ion-card {
+      display: block;
+      width: 400px;
+  }
+}
