--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+      Settings
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,33 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
+      <ion-title size="large">Settings</ion-title>
     </ion-toolbar>
   </ion-header>
+  <ion-list>
+    <ion-label>Adjust Brightness</ion-label>
+    <ion-item>
+      <ion-range color="primary" pin="true">
+        <ion-icon size="small" slot="start" name="sunny"></ion-icon>
+        <ion-icon slot="end" name="sunny"></ion-icon>
+      </ion-range>
+    </ion-item> 
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+    <ion-label>Filter the item's price</ion-label>
+    <ion-item>
+      <ion-range min="0" max="1000" step="50" snaps="true" color="success" pin="true">
+        <ion-icon size="small" slot="start" name="cash-outline"></ion-icon>
+        <ion-icon slot="end" name="cash-outline"></ion-icon>
+      </ion-range>
+    </ion-item> 
+  
+    <ion-label>Show stores within these distance</ion-label>
+    <ion-item>
+      <ion-range min="0" max="1000" step="50" snaps="true" color="tertiary" pin="true">
+        <ion-icon size="small" slot="start" name="home-outline"></ion-icon>
+        <ion-icon slot="end" name="home-outline"></ion-icon>
+      </ion-range>
+    </ion-item> 
+
+  </ion-list>
 </ion-content>
